@@ -18,6 +18,7 @@ function theme_scanner_results($variables) {
     $output = '<p>Found matches in ' . $total . ' fields:</p>';
     $output .= '<ol class="scanner-results scanner-search-results">';
     foreach ($results as $item) {
+      dpm($item);
       $output .= theme('scanner_item', array('item' => $item));
     }
     $output .= '</ol>';
@@ -38,7 +39,7 @@ function theme_scanner_item($variables) {
   $item = $variables['item'];
   $item['count'] = $item['count'] > 0 ? $item['count'] : 'One or more';
   $output .= '<li class="scanner-result">';
-  $output .= '<span class="scanner-title">' . l($item['title'], 'node/' . $item['nid']) . '</span><br />';
+  $output .= '<span class="scanner-title">' . l('#' . $item['nid'] . ': ' . $item['title'], 'node/' . $item['nid']) . '</span><br />';
   $output .= '<span class="scanner-info">[' . $item['count'] . ' matches in ' . $item['type'] . ' ' . $item['field_label'] . ' field:]</span><br />';
   $output .= '<span class="scanner-text">' . $item['text'] . '</span>';
   $output .= '</li>';
