@@ -12,6 +12,8 @@ function scanner_with_fc_tests_node_presave($node) {
   if (isset($node->devel_generate['word'], $node->field_stuff[LANGUAGE_NONE])) {
     foreach ($node->field_stuff[LANGUAGE_NONE] as $key => &$field) {
       $fc = field_collection_item_load($field['value']);
+
+      // Only do one fifth of the records (average).
       if (mt_rand(0, 5) == 5) {
         foreach ($fc->field_text[LANGUAGE_NONE] as $fc_key => &$fc_field) {
           // This field is a single string with a max length of 255. So, the
@@ -24,6 +26,8 @@ function scanner_with_fc_tests_node_presave($node) {
           $fc_field['value'] = substr(implode(' ', $bits), 0, 255);
         }
       }
+
+      // In other cases, remove the value entirely.
       else {
         foreach ($fc->field_text[LANGUAGE_NONE] as $fc_key => &$fc_field) {
           $fc_field['value'] = str_replace($node->devel_generate['word'], '', $fc_field['value']);
