@@ -2,6 +2,8 @@ Search and Replace Scanner 7.x-1.x-dev, xxxx-xx-xx
 --------------------------------------------------
 #2978697 by DamienMcKenna: Add link on admin/content/scanner page to settings
   page.
+#2978853 by DamienMcKenna: Refactor codebase to make it easier to extend, added
+  hooks so other modules can extend the search/replace logic.
 
 
 Search and Replace Scanner 7.x-1.0, 2018-05-19
